# python-simple-document-analyzer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
core/: __init__.py  settings.py  storage.py
prompts/: content_summary.txt  text_summary
shared/: date_utils.py  file_utils.py  pdf_utils.py  text_utils.py  vision_utils.py
